# namelint

./: .editorconfig  .gitignore  Cargo.toml  Gemfile  LICENSE.txt  README.md  exam-run.sh  run.sh  v-run.sh  www-run.sh
.github/workflows/: rule-validation.yaml  website-deploy.yaml  yaml-validation.yaml
config/: default.yaml  self.yaml
docs/: CNAME  _config.yaml  index.html  index.md  namelint-config-schema.yaml  namelint-rule-schema.yaml  namelint-rules-schema.yaml  namelint-schema.yaml  robots.txt  schemas.md  sitemap.xml  status.json
docs/_drafts/: case.md  cloudflare-wirefilter.md  filesan.md  fix.md  homoglyphs.md  mandatory-rules.md  notox.md  super-linter.md  testing.md  useful-rust-libs.md  where-to-find.md  windows-max-path.md
docs/_layouts/: default.html
docs/_posts/: 2024-08-16-starting.md  2024-08-17-prior-art.md  2024-09-02-something-runs.md  2025-03-22-agpl.md  2025-03-22-gpl.md  2025-03-23-matt.md  2025-03-24-rules-and-rulesets.md  2025-04-05-specifying-paths.md  2025-04-12-wildcard-danger.md  (+2 more)
rules/: README.md  case.yaml  linux.yaml  lowercase.yaml  msdos.yaml  no-msdos-reserved.yaml  no-trailing-whitespace.yaml  no_leading_whitespace.yaml  no_msdos_reserved.yaml  no_trailing_whitespace.yaml  posix.yaml  uppercase.yaml  whitespace.yaml
schema/: namelint-rules-schema.yaml  namelint-ruleset-schema.yaml
src/: exam-cli.rs  load.rs  load_dir.rs  main.rs  parse_config.rs  parse_rules.rs  process_file.rs  regex_rule.rs  run_lint.rs  safe_name.rs  schema.rs  structs.rs  validate-cli.rs  validate.rs
test/: alt_rules.yaml  custom_rules.yaml
(+6 files in other folders)
