[package]
name = "namelint"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.16", default-features = false, features = ["help", "usage", "error-context", "suggestions", "derive", "env", "std", "string"] }
include_dir = { version = "0.7.4", features = ["glob"] }
regex = "1.10.6"
serde = { version = "1.0.209", features = ["derive"] }
serde_yaml = "0.9.34"

[workspace]
members = ["tools/cargo-bin"]

[package.metadata.bin]
cargo-binstall = { version = "1.12.2" }
