[package]
name = "namelint"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.16", default-features = false, features = ["help", "usage", "error-context", "suggestions", "derive", "env", "std", "string"] }
include_dir = { version = "0.7.4", features = ["glob"] }
jsonschema = { version = "0.29.0", default-features = false, features = ["resolve-file"] }
phf = { version = "0.11.3", features = ["macros"] }
regex = "1.10.6"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
unicode-normalization = "0.1.24"

[[bin]]
name = "namelint"
path = "src/main.rs"

[[bin]]
name = "validate-cli"
path = "src/validate-cli.rs"
